# BSP_Tree

./: README
docs/: algorithm_description.txt  algorithm_description.txt~
models/: models.txt
models/BOX_obj/: BOX.mtl
models/ChancletasOBJ/: Chancletas OBJ.mtl
models/Pencil_obj/: Pencil.mtl
models/Stone_Lantern/: Stone_Lantern_1.mtl
models/Xmas_balls_obj/: Copy of Terrasse_con.HDR
models/neuro_hammer_obj/: README.txt
models/tbl033_OBJ/: find more 3D models here.url  readme.txt  tbl033.mtl
models/traffic_cone_obj/: traffic_cone.mtl
presentation/: FinalPresent_v3.pptx  code_snippets.txt
presentation/screenshot/andriod/: andriod_cube
presentation/screenshot/ball_cube/: ball_minus_cube  ball_union_cube  ball_with_cube
presentation/screenshot/bunny_cube/: bunny1  bunny_cube_default  bunny_minus_cube  bunny_union_cube  cube1  cube_minus_bunny  only_bunny_only_cube
src/: CMakeLists.txt  CMakeLists.txt~
src/SDLmain/: CMakeLists.txt
src/bsptree/: #mesh.hpp#  CMakeLists.txt  CMakeLists.txt~  bsptree.cpp  bsptree.cpp~  bsptree.hpp~  mesh.cpp  mesh.cpp~  mesh.hpp  mesh.hpp~
src/main/: #mesh.cpp#  .#mesh.cpp  CMakeLists.txt  CMakeLists.txt~  bsptree.cpp  bsptree.cpp~  bsptree.hpp  bsptree.hpp~  main.cpp  main.cpp~  main_bsp.cpp  main_bsp.cpp~  mesh.cpp  mesh.cpp~  mesh.hpp  mesh.hpp~  prev_main.cpp  r0_main_bsp.cpp  r0_main_bsp.cpp~  r1_main.cpp  r2_main.cpp  r4_main.cpp
src/math/: CMakeLists.txt  CMakeLists.txt~  color.cpp  color.hpp  matrix.cpp  matrix.hpp  quaternion.hpp  vector.cpp  vector.hpp  vector.hpp~
(+40 files in other folders)
